--- a/index.html
+++ b/index.html
@@ -787,6 +787,33 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets/website-image/coolmoon.png" alt="arrival" loading="lazy">
+                </figure>
+                <h3 class="project-title text-capitalize">Restaurant</h3>
+                <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   400</p>
+                <!-- <p class="project-category">Web development</p> -->
+              </a>
+            </li>
+            
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets/website-image/portfolio2.png" alt="finance" loading="lazy">
+                </figure>
+                <h3 class="project-title ">E-commerce</h3>
+                <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   300</p>
+              </a>
+            </li>
+
             <!-- website 2 -->
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="#">
@@ -902,19 +929,7 @@
             </li>
 
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-                  <img src="assets/website-image/coolmoon.png" alt="arrival" loading="lazy">
-                </figure>
-                <h3 class="project-title text-capitalize">Restaurant</h3>
-                <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   400</p>
-                <!-- <p class="project-category">Web development</p> -->
-              </a>
-            </li>
+
 
 
             <li class="project-item  active" data-filter-item data-category="web development">
@@ -927,6 +942,48 @@
                 </figure>
                 <h3 class="project-title text-capitalize">E-commerce</h3>
                 <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   200</p>
+                <!-- <p class="project-category">Web development</p> -->
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets/website-image/E-sport.png" alt="arrival" loading="lazy">
+                </figure>
+                <h3 class="project-title text-capitalize">E-sport</h3>
+                <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   700</p>
+                <!-- <p class="project-category">Web development</p> -->
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets/website-image/eSports.png" alt="arrival" loading="lazy">
+                </figure>
+                <h3 class="project-title text-capitalize">E-sport</h3>
+                <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   700</p>
+                <!-- <p class="project-category">Web development</p> -->
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="#">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="assets/website-image/eSports2.png" alt="arrival" loading="lazy">
+                </figure>
+                <h3 class="project-title text-capitalize">E-sport</h3>
+                <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   700</p>
                 <!-- <p class="project-category">Web development</p> -->
               </a>
             </li>
