--- a/index.html
+++ b/index.html
@@ -797,6 +797,7 @@
                 </figure>
                 <h3 class="project-title text-capitalize">Restaurant</h3>
                 <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   400</p>
+                <p class="project-category">sold</p>
                 <!-- <p class="project-category">Web development</p> -->
               </a>
             </li>
