--- a/index.html
+++ b/index.html
@@ -796,8 +796,8 @@
                   <img src="assets/website-image/coolmoon.png" alt="arrival" loading="lazy">
                 </figure>
                 <h3 class="project-title text-capitalize">Restaurant</h3>
-                <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   400</p>
-                <p class="project-category">sold</p>
+                <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   400 <span  style="color: red; font-weight: bold;">sold</span></p>
+             
                 <!-- <p class="project-category">Web development</p> -->
               </a>
             </li>
