--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
           <ul class="project-list">
             <!-- website 1 -->
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="order.html">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -817,7 +817,7 @@
 
             <!-- website 2 -->
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="portfolio.html">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
