--- a/portfolio.html
+++ b/portfolio.html
@@ -121,15 +121,15 @@
         <div class="row website-details text-center mb-4">
             <div class="col-md-4">
                 <h4>Website Name</h4>
-                <p>Awesome Website</p>
+                <p>portfolio</p>
             </div>
             <div class="col-md-4">
                 <h4>Price</h4>
-                <p><i class="fa-solid fa-indian-rupee-sign"></i> 200</p>
+                <p><i class="fa-solid fa-indian-rupee-sign"></i> 350</p>
             </div>
             <div class="col-md-4">
                 <h4>Order Reference</h4>
-                <p>ORD-12345</p>
+                <p>ORD-portfolio12</p>
             </div>
         </div>
 
