--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                   </div>
                   <img src="assets/website-image/portfolio.png" alt="portfolio" loading="lazy" class="">
                 </figure>
-                <h3 class="project-title text-capitalize">portfolio</h3>
+                <h3 class="project-title text-capitalize"><i class="fa-solid fa-heart" style="color: green;"></i> portfolio</h3>
                 <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   350</p>
               </a>
             </li>
@@ -845,7 +845,7 @@
             
             <!-- website 4 -->
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="restruent_app.html">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
