--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                   </div>
                   <img src="assets/website-image/portfolio.png" alt="portfolio" loading="lazy" class="">
                 </figure>
-                <h3 class="project-title text-capitalize"><i class="fa-solid fa-heart" style="color: green;"></i> portfolio</h3>
+                <h3 class="project-title text-capitalize">portfolio  <i class="fa-solid fa-heart" style="color: green;"></i></h3>
                 <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   350</p>
               </a>
             </li>
@@ -852,7 +852,7 @@
                   </div>
                   <img src="assets/website-image/restaurant-app.png" alt="portfolio" loading="lazy" class="">
                 </figure>
-                <h3 class="project-title text-capitalize">Restaurant</h3>
+                <h3 class="project-title text-capitalize">Restaurant  <i class="fa-solid fa-heart" style="color:green;"></i></h3>
                 <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   350</p>
               </a>
             </li>
@@ -873,14 +873,14 @@
 
             <!-- website 6 -->
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="amazon.html">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="assets/website-image/amazon.png" alt="portfolio" loading="lazy" class="">
                 </figure>
-                <h3 class="project-title text-capitalize">Amazon</h3>
+                <h3 class="project-title text-capitalize">Amazon  <i class="fa-solid fa-heart" style="color: green;"></i></h3>
                 <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   350</p>
               </a>
             </li>
