--- a/index.html
+++ b/index.html
@@ -859,14 +859,14 @@
 
             <!-- website 5 -->
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="ecomerse2.html">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="assets/website-image/E-commerce2.png" alt="portfolio" loading="lazy" class="">
                 </figure>
-                <h3 class="project-title text-capitalize">E-commerce</h3>
+                <h3 class="project-title text-capitalize">E-commerce  <i class="fa-solid fa-heart" style="color: green;"></i></h3>
                 <p class="project-category"> <i class="fa-solid fa-indian-rupee-sign mr-4"></i>   200</p>
               </a>
             </li>
@@ -934,7 +934,7 @@
 
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="ecomerse2.html">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
